カレンダーの中央表示

--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,7 @@ section#captain img {
   position: relative;
   width: 100%;
   overflow: hidden;
+  text-align: center;
 }
 
 .iframe-container iframe {
